# multilingual-mt-framework

./: README.md  requirements.txt
api/: __init__.py  server.py
cpp/: CMakeLists.txt  main.cpp
src/: __init__.py  data.py  evaluate.py  export_onnx.py  infer_python.py  model.py  tokenize.py  train.py
